styles/menu.module.css
/* Menu */
.LogoHeater img {
  opacity: 0.9;
  height: 100px;
  width: auto;
  margin-top: 5px;
}



.SelectCurserStyleHeater {
  padding: 14%;
  border-radius: 50%;
  background: #8faa9f2f;
  border-right: 4px #50708d inset;
  border-left: 4px #50708d inset;
  border-top: 4px #72722b inset;
  border-bottom: 4px #72722b inset;
  margin-right: 20px;
  margin-top: 7%;
  animation: circle 50s linear infinite;
}

@keyframes circle {
  0% {
    transform:
      rotate(0deg);
  }

  100% {
    transform:
      rotate(-360deg);
  }
}



.SelectCursor {
  width: 150px;
  row-gap: 20px;
  column-gap: 35px;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  cursor: pointer;
  padding: 10%;
  background: url("https://i.postimg.cc/wBgRtx0Z/dark-matter.png");
  margin-bottom: -4.7%;
  margin-top: -5%;
  color: rgba(255, 255, 255, 0.749);
  border-right: 5px #50708d inset;
  border-left: 5px #50708d inset;
  border-top: 5px #72722b inset;
  border-bottom: 5px #72722b inset;
}

.SelectCursor h1 {
  font-size: 16px;
  color: #d7b541;
}

.SelectCursor img:hover {
  opacity: 0.9;
  transform: scale(0.9, 0.9);
}

